--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,25 @@
+# Math Omni v2 - Requirements
+# Generated from LLM Council Full Stack review + Cursor pinning
+
+# Core Framework
 PyQt6==6.6.1
 qasync==0.28.0
+
+# Async Database
 aiosqlite==0.22.1
+
+# Audio Duration Detection (per Constitution)
+mutagen>=1.46.0
+
+# Configuration
+pyyaml>=6.0.0
+
+# Testing
 pytest>=8.0.0
 pytest-asyncio>=0.23.0
+
+# TTS (optional - for dynamic speech generation)
+edge-tts>=6.1.0
+
+# Note: Install Lexend font separately from Google Fonts
+# https://fonts.google.com/specimen/Lexend
